[gd_scene load_steps=11 format=3 uid="uid://ctxh2gs26j3gu"]

[ext_resource type="Texture2D" uid="uid://cdr8q7dl0df80" path="res://images/screens/form_login.jpg" id="1_fhjaf"]
[ext_resource type="Script" path="res://scripts/scenes/Login.gd" id="1_j4tys"]
[ext_resource type="Texture2D" uid="uid://bwkj88vqd58iu" path="res://images/screens/button_ok.png" id="2_appd1"]
[ext_resource type="PackedScene" uid="uid://dm643kdvu8ct7" path="res://scenes/Main.tscn" id="3_g5p1k"]
[ext_resource type="PackedScene" uid="uid://8vw6uk1ffr4l" path="res://scenes/BlurContainer.tscn" id="5_fne2j"]
[ext_resource type="PackedScene" uid="uid://d0dyytb7nri5t" path="res://scenes/SoundControlSidebar.tscn" id="6_odfok"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eujh7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2aktq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cmm1p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iag10"]

[node name="Login" type="TextureRect"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_fhjaf")
script = ExtResource("1_j4tys")
main_scene = ExtResource("3_g5p1k")

[node name="UsernameLineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 572.0
offset_top = 497.0
offset_right = 752.0
offset_bottom = 528.0
max_length = 16

[node name="PasswordLineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 572.0
offset_top = 540.0
offset_right = 752.0
offset_bottom = 571.0
max_length = 16
secret = true

[node name="LoginButton" type="Button" parent="."]
layout_mode = 0
offset_left = 520.0
offset_top = 594.0
offset_right = 663.0
offset_bottom = 680.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_eujh7")
theme_override_styles/hover = SubResource("StyleBoxEmpty_2aktq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cmm1p")
theme_override_styles/focus = SubResource("StyleBoxEmpty_iag10")
icon = ExtResource("2_appd1")

[node name="BlurContainer" parent="." instance=ExtResource("5_fne2j")]
visible = false
layout_mode = 1

[node name="SoundControlSidebar" parent="." instance=ExtResource("6_odfok")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -72.0
offset_right = 0.0
offset_bottom = 72.0
grow_horizontal = 0
grow_vertical = 2

[connection signal="pressed" from="LoginButton" to="." method="_on_login_button_pressed"]
